--- a/index.html
+++ b/index.html
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
     <title>Hello</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="container">
+    <div class="weather-app">
     <h1>
-        Hello
+<h1 id="city">Kyiv</h1> 
+        <ul class="date">
+          <li>Monday 03/10/2022</li>
+          <li>
+        9:33am
+          </li>
+          </ul>
     </h1>
+
+    <div class="row">
+        <div class="col-6"
+        <img src="https://ssl.gstatic.com/onebox/weather/64/rain_s_cloudy.png"
+        alt="Cloudy"/>
+        8 ℃ | ℉
+</div>
+<div class="col-6">
+    <ul>
+        <li>Precipitation: 70%</li>
+        <li>Humidity: 82%</li>
+        <li>Wind: 5 m/s</li>
+    </ul>
+
+</div>
+        </div>
+    <small>
+        <a href="https://github.com/AlonaCh/Vanilla-project.git" target="_blank">Open-source code</a> by Alona Chubenko
+    </small>
+    </div>
+    </div>
     <script src="src/app.js"></script>
-</body>
+  </body>
 </html>
