Changed CSS elements

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="row">
         <div class="col-6"
-        <img src="https://ssl.gstatic.com/onebox/weather/64/rain_s_cloudy.png"
+        <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
         alt="Cloudy"/>
         8 ℃ | ℉
 </div>
@@ -42,6 +42,9 @@
 
 </div>
         </div>
+  
+    </div>
+    <div style="text-align:center">
     <small>
         <a href="https://github.com/AlonaCh/Vanilla-project.git" target="_blank">Open-source code</a> by Alona Chubenko
     </small>
