--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <div class="col-6">
             <ul>
               <li>Precipitation: 70%</li>
-              <li>Humidity: 82%</li>
-              <li>Wind: 5 m/s</li>
+              <li>Humidity: <span id="humidity"></span>%</li>
+              <li>Wind: <span id="wind"></span> km\h</li>
             </ul>
           </div>
         </div>
