Added real time

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="weather-app">
         <h1 id="city"></h1>
         <ul class="date">
-          <li>Monday 03/10/2022</li>
-          <li>9:33am</li>
+          <li id="date"></li>
+          
           <li id="description"></li>
         </ul>
 
