--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <img
                 src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
                 alt="Cloudy"
+                id = "icon"
               />
               <div>
                 <strong id="temperature"></strong
