--- a/index.html
+++ b/index.html
@@ -18,10 +18,26 @@
   <body>
     <div class="container">
       <div class="weather-app">
+        <form id="search-form" class="mb-3">
+          <div class="row">
+            <div class="col-9">
+              <input
+                type="search"
+                placeholder="Type a city..."
+                class="form-control"
+                id="city-search"
+                autocomplete="off"
+              />
+            </div>
+            <div class="col-3">
+              <input type="submit" value="search" class="btn btn-primary"/>
+            </div>
+          </div>
+        </form>
         <h1 id="city"></h1>
         <ul class="date">
           <li id="date"></li>
-          
+
           <li id="description"></li>
         </ul>
 
@@ -31,7 +47,7 @@
               <img
                 src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
                 alt="Cloudy"
-                id = "icon"
+                id="icon"
               />
               <div>
                 <strong id="temperature"></strong
