Added converrsion to Fahrenheit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               />
             </div>
             <div class="col-3">
-              <input type="submit" value="search" class="btn btn-primary"/>
+              <input type="submit" value="search" class="btn btn-primary" />
             </div>
           </div>
         </form>
@@ -51,7 +51,7 @@
               />
               <div>
                 <strong id="temperature"></strong
-                ><span class="units">℃ |<a href="#">℉</a></span>
+                ><span class="units">℃ |<a href="#" id="fahrenheit-link">℉</a></span>
               </div>
             </div>
           </div>
