--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
               />
               <div>
                 <strong id="temperature"></strong
-                ><span class="units">℃ |<a href="#" id="fahrenheit-link">℉</a></span>
+                ><span class="units">
+                  <a href="#" id="celsius-link">℃</a> |
+                  <a href="#" id="fahrenheit-link">℉</a>
+                </span>
               </div>
             </div>
           </div>
