Improved temperature links

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
               <div>
                 <strong id="temperature"></strong
                 ><span class="units">
-                  <a href="#" id="celsius-link">℃</a> |
-                  <a href="#" id="fahrenheit-link">℉</a>
+                  <a href="#" id="celsius-link" class="active">℃</a> |
+                  <a href="#" id="fahrenheit-link" class="link">℉</a>
                 </span>
               </div>
             </div>
