--- a/index.html
+++ b/index.html
@@ -66,6 +66,24 @@
             </ul>
           </div>
         </div>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2">
+              <div class="weather-forecast-date">
+              Thu
+              </div>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+                alt=""
+                width="46"
+              />
+              <div class="weather-forecast-temperatures">
+              <span class="weather-forecast-max"> 18° </span> <span class="weather-forecast-min"> 12° </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      
       </div>
       <div style="text-align: center">
         <small>
