Added an other API URL

--- a/index.html
+++ b/index.html
@@ -60,14 +60,13 @@
           </div>
           <div class="col-6">
             <ul>
-              <li>Precipitation: 70%</li>
-              <li>Humidity: <span id="humidity"></span>%</li>
-              <li>Wind: <span id="wind"></span> km\h</li>
+              <li>Feels like: <span id="feels-like"></span> ℃</li>
+              <li>Humidity: <span id="humidity"></span> %</li>
+              <li>Wind: <span id="wind"></span> m/s </li>
             </ul>
           </div>
         </div>
         <div class="weather-forecast" id="forecast"></div>
-      
       </div>
       <div style="text-align: center">
         <small>
