--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div class="container">
+      <div class="weather-app-wrapper">
       <div class="weather-app">
         <form id="search-form" class="mb-3">
           <div class="row">
@@ -30,7 +31,7 @@
               />
             </div>
             <div class="col-3">
-              <input type="submit" value="search" class="btn btn-primary" />
+              <input type="submit" value="Search" class="btn btn-outline-info" />
             </div>
           </div>
         </form>
@@ -69,14 +70,15 @@
         <div class="weather-forecast" id="forecast"></div>
       </div>
       <div style="text-align: center">
-        <small>
+        <small class="code">
           <a
             href="https://github.com/AlonaCh/Vanilla-project.git"
-            target="_blank"
-            >Open-source code</a
+            target="_blank" style="text-decoration: none"
+            ><em>Open-source code</a
           >
-          by Alona Chubenko
+          by Alona Chubenko</em>
         </small>
+        </div>
       </div>
     </div>
     <script src="app.js"></script>
